# my-shopify-inventory-utils

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sample.env
data/: inventory.xlsx  inventory_old.xlsx  sample.xlsx  ~$inventory.xlsx
db/: Dockerfile  articles.sql  invoices.sql  orders.sql  purchase.sql  restore.sql  shopify_products.sql
min_symaskin_inventory_utils/: inventory_import.py  main.py  scraping.py
min_symaskin_inventory_utils/brother/: api.py
minsymaskin/: main.py
minsymaskin/dto/: __init__.py  image.py  product.py
minsymaskin/dto/shopify/: __init__.py  product.py
minsymaskin/scripts/: shopify_import.py
minsymaskin/shopify/: inventory.py
minsymaskin/templates/: __init__.py  product.py
minsymaskin/translate/: __init__.py  deep_learning.py  google_translate.py
myshopify/: config.py  main.py
myshopify/dto/: __init__.py  image.py  product.py  types.py
myshopify/scraping/: utils.py
myshopify/scripts/: minsymaskin_inventory_sync.py  quiltefryd_inventory_import.py  shopify_import.py
myshopify/shopify/: inventory.py
myshopify/templates/: __init__.py  product.py
myshopify/translate/: __init__.py  deep_learning.py  google_translate.py  types.py
myshopify/utils/: __init__.py  image.py
scripts/: download_and_extract_data.py  download_data.py  extract_data.py  extract_pc_kasse.py  migrate_products_to_amendo.py  minsymaskin_inventory_sync.py  quiltefryd_inventory_import.py  shopify_inventory_import.py  update_minsymaskin.py  update_quiltefryd.py
scripts/old/: minsymaskin_inventory_sync_excel.py
scripts/sql/: articles.sql  cash.sql  customers.sql  restore.sql  shopify_products.sql
tests/: __init__.py  conftest.py
tests/api/: test_amendo.py
tests/dto/: test_image.py  test_product.py
tests/scraping/: test_brother.py
tests/templates/: test_product.py
tests/translate/: test_deep_translate.py  test_google_translate.py
(+32 files in other folders)
