[tool.poetry]
name = "myshopify"
version = "0.2.0"
description = ""
authors = ["morten.aslesen <mortendaehli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
ShopifyAPI = "^10.0.0"
python-dotenv = "^0.19.2"
openpyxl = "^3.0.9"
pandas = "^1.3.5"
typer = "^0.4.0"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.0"
requests = "^2.27.1"
Pillow = "^9.0.0"
Jinja2 = "^3.0.3"
pydantic = "^1.9.0"
markdownify = "^0.10.3"
Markdown = "^3.3.6"
pyperclip = "^1.8.2"
retry = "^0.9.2"
SQLAlchemy = "^1.4.34"
pyodbc = "^4.0.32"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
