[tool.poetry]
name = "myshopify"
version = "0.2.0"
description = ""
authors = ["morten.aslesen <mortendaehli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ShopifyAPI = "^12"
python-dotenv = "^0"
openpyxl = "^3"
pandas = "^1.4"
typer = "^0.6.0"
beautifulsoup4 = "^4"
selenium = "^4"
requests = "^2.27.1"
Pillow = "^9.0.0"
Jinja2 = "^3.0.3"
pydantic = "^1.9.0"
retry = "^0.9.2"
SQLAlchemy = "^1.4.34"
pyodbc = "^4.0.32"

[tool.poetry.dev-dependencies]
pytest = "^7"
pre-commit = "^2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
